// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render 1`] = `
<div>
  <button
    class="Button-mdtvtf-0 gRMEUp"
    type="button"
  />
</div>
`;

exports[`Button should render a large one 1`] = `
<div>
  <button
    class="Button-mdtvtf-0 jNSLbY"
    type="button"
  />
</div>
`;

exports[`Button should render a small one 1`] = `
<div>
  <button
    class="Button-mdtvtf-0 dRlJms"
    type="button"
  />
</div>
`;

exports[`Button should render an icon 1`] = `
<div>
  <button
    class="Button-mdtvtf-0 jRFAPR"
    type="button"
  />
</div>
`;

exports[`Button should render as danger button 1`] = `
<div>
  <button
    class="Button-mdtvtf-0 hWGHFa"
    type="button"
  />
</div>
`;

exports[`Button should render as primary button 1`] = `
<div>
  <button
    class="Button-mdtvtf-0 gRMEUp"
    type="button"
  />
</div>
`;

exports[`Button should render as secondary button 1`] = `
<div>
  <button
    class="Button-mdtvtf-0 fEHbkH"
    type="button"
  />
</div>
`;

exports[`Button should render as transparent button 1`] = `
<div>
  <button
    class="Button-mdtvtf-0 gGNgyI"
    type="button"
  />
</div>
`;

exports[`Button should render if disabled 1`] = `
<DocumentFragment>
  <button
    class="Button-mdtvtf-0 jqEyNv"
    disabled=""
    type="button"
  >
    Click
  </button>
</DocumentFragment>
`;
